unprofitable file deleted

--- a/index.html
+++ b/index.html
@@ -254,6 +254,6 @@
           </div>
         </footer>
         <!--End of the footer part-->
-      <script src="js/Theme.js"></script>
+     git
       </body>
     </html>
