--- a/album.html
+++ b/album.html
@@ -11,6 +11,7 @@
     
       <!-- Css link'lari ulangan 🌸 --> 
         <link rel="stylesheet" href="css/coustum.css">
+        <link rel="stylesheet" href="/css/album.css">
       <!-- Css link'lari ulangan 🌸 --> 
 </head>
 <body>
@@ -29,7 +30,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Pricing</a>
+              <a class="nav-link active" aria-current="page" href="/pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Product</a>
