--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link active" aria-current="page" href="/album.html">Album</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Pricing</a>
+                <a class="nav-link active" aria-current="page" href="/pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Product</a>
