--- a/pricing.html
+++ b/pricing.html
@@ -55,9 +55,13 @@
         </div>
       </div>
     </nav>
+    <div class="hero-image">
+      <div class="hero-text">
      <div class="pricing-header p-3 mt-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4 fw-normal text-body-secondary">Pricing</h1>
-      <p class="fs-5 text-body-secondary">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+      <h1 class="display-4  fw-light">Pricing</h1>
+      <p class="lead fw-light">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+     </div>
+     </div>
      </div>
       
     </header>
